Исправления шрифтов, начала сетку

--- a/catalog.html
+++ b/catalog.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="header">
       <nav class="header-nav">
-          <a class="header__logo-link" href="index.html">
             <img class="header__logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
-          </a>
           <ul class="header__menu">
             <li class="header__menu-item"><a class="header__menu-link" href="catalog.html">Каталог</a>
               <ul class="header__menu-inner">
@@ -87,7 +85,7 @@
 
 
 
-      <form class="form form--inline">
+      <form class="form">
         <div class="form-row">
           <div class="form-group">
             <label for="sort_type">Сортировка:</label>
@@ -123,7 +121,7 @@
         </div>
       </form>
 
-
+<!-- Выше находится форма фильтрации, только на странице каталога -->
 
       <ul class="catalog">
           <li class="catalog__item catalog-item">
